--- a/styles/setup.css
+++ b/styles/setup.css
@@ -91,6 +91,7 @@ video {
   font: inherit;
   vertical-align: baseline;
 }
+
 /* HTML5 display-role reset for older browsers */
 article,
 aside,
@@ -105,17 +106,21 @@ nav,
 section {
   display: block;
 }
+
 body {
   line-height: 1;
 }
+
 ol,
 ul {
   list-style: none;
 }
+
 blockquote,
 q {
   quotes: none;
 }
+
 blockquote:before,
 blockquote:after,
 q:before,
@@ -123,10 +128,12 @@ q:after {
   content: '';
   content: none;
 }
+
 table {
   border-collapse: collapse;
   border-spacing: 0;
 }
+
 /*button reset*/
 
 button {
@@ -134,7 +141,7 @@ button {
   border: none;
   margin: 0;
   text-decoration: none;
-  background: #0069ed;
+  /* background: #0069ed; */
   color: #ffffff;
   font-family: sans-serif;
   font-size: 1rem;
@@ -151,19 +158,23 @@ html {
   box-sizing: border-box;
   scroll-behavior: smooth;
 }
+
 *,
 *:before,
 *:after {
   box-sizing: inherit;
-} /* https://www.paulirish.com/2012/box-sizing-border-box-ftw */
+}
+
+/* https://www.paulirish.com/2012/box-sizing-border-box-ftw */
 
 
 
-b, strong {
-	font-weight: bold;
- }
- 
- 
+b,
+strong {
+  font-weight: bold;
+}
+
+
 
 a {
   display: block;
